# RPA

./: .gitignore  demo_mcp.py  pyproject.toml  update_excel_biz.py
.codex/skills/bilibili-rpa-workflow/: SKILL.md
.codex/skills/bilibili-rpa-workflow/agents/: openai.yaml
.codex/skills/bilibili-rpa-workflow/scripts/: crawl_and_transcribe.ps1  crawl_and_transcribe.sh  crawl_ups.ps1  crawl_ups.sh  transcribe_ups.ps1  transcribe_ups.sh
.codex/skills/wechat-rpa-workflow/: SKILL.md
.codex/skills/wechat-rpa-workflow/agents/: openai.yaml
advanced_crawler/: CHANGELOG.md  LICENSE  PROJECT_OVERVIEW.md  README.md  config_examples.py  examples.py  install.py  quick_start.py  run.py  test_system.py
agent_graph/: __init__.py  graph_runner.py  nodes.py  state.py
bili2text/: README.md  batch_process_ups.py  downBili.py  exAudio.py  main.py  main_run_speech_to_text.py  punct_daemon.py  speech2text.py  video_processor.py  window.py  xunfei.py
bili2text/test/: test_downbili_youtube_args.py  test_funasr.py  test_punct_restore.py  test_whisper.py
src/agents/: agent_pydantic_ai.py  agent_schema.py  large_data_train.py  model_utils.py  playlistVideoRenderer.ini  train_model.py
src/config/: token_config.py
src/prompts/: factor_prompts.py
src/server/: file_server.py  page_renderer.py  server_core.py  users.json
src/server/bak/: file_server_v1.py  file_server_v2_md.py
src/server/bak/templates/: login.html
src/test/: demo_langchain.py  demo_wechat.py  request_url.py
src/tools_ai/: text_correct.py  text_embedding.py  text_llm.py  whisper_processor.py
src/tools_browser/: bilibili_browser_roll_runner.py  browser_compare.py  bs4_parse_html.py  fetch_detail_batch_urls.py  fetch_home_page_url.csv  page.html  playright_roll_page.py  playwright_chatgpt_upload.py  playwright_roll_page.py  selenium_alphaarchitect.py  selenium_chatgpt.py  selenium_kimi.py  shark_https.py  wechat_biz_browser_runner.py  wechat_home_page_url.py
src/tools_crawl/: ProxyHandler修复方案.md  ProxyHandler问题分析.md  README.md  Task_高效爬虫流量抓包方案.md  analyze_demo_html.py  debug_real_html.py  pyproject.toml  requirements.txt  test_proxy_handler_fix.py  优雅关闭修复报告.md  小红书爬虫重构任务.md
src/tools_crawl/captured_data/: demo.html  extracted_data.json
src/tools_crawl/config/: global.yaml  xiaohongshu.exp  yujing.exp
src/tools_crawl/cookies/: www.xiaohongshu.com_cookies.json
src/tools_crawl/docs/: cookie_配置使用指南.md
src/tools_crawl/examples/: README_测试说明.md  capture_traffic.py  test_capture.py  test_proxy.py  verify_capture.py
src/tools_crawl/src/: browser_manager.py  config_parser.py  data_processor.py  helper.py  proxy_handler.py  xhs_crawler.py
src/tools_crawl/src/adaptor/: universal_adaptor.py
src/tools_crawl/src/extractor/: advanced_json_matcher.py  html_structure_extractor.py  json_extractor.py  universal_extractor.py
src/tools_crawl/src/utils/: logger.py
src/tools_data_process/: engine_excel.py  engine_mysql.py  engine_url_pg.py  print.css  schema_check.py  utils_format_pdf.py  utils_format_text.py  utils_html_lazy_picture.py  utils_path.py
