[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RPA"
version = "0.1.0"
description = "RPA to text converter"

requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "argcomplete==3.2.2",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "decorator==4.4.2",
    "fastapi==0.109.2",
    "filelock==3.16.1",
    "fsspec==2024.9.0",
    "idna==3.7",
    "imageio==2.34.2",
    "imageio-ffmpeg==0.5.1",
    "Jinja2==3.1.4",
    "llvmlite==0.43.0",
    "MarkupSafe==3.0.2",
    "more-itertools==10.5.0",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "networkx==3.4.1",
    "numba==0.60.0",
    "numpy==2.0.0",
    "openai-whisper==20240930",
    "packaging==23.2",
    "pillow==10.4.0",
    "pipx==1.4.3",
    "proglog==0.1.10",
    "pydub==0.25.1",
    "pynput==1.7.6",
    "regex==2024.9.11",
    "requests==2.32.3",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sympy==1.13.1",
    "tiktoken==0.8.0",
    "torch==2.5.0",
    "tqdm==4.66.4",
    "ttkbootstrap==1.10.1",
    "typing_extensions==4.12.2",
    "urllib3==2.2.2",
    "userpath==1.9.1",
    "whisper==1.1.10",
    "curl_cffi==0.13.0",
    "retrying==1.4.2",
    "pandas",
    "openpyxl",
    "pymysql",
    "langchain_community==0.3.21",
    "openai==2.3.0",
    "ray>=2.12",
    "faster_whisper==1.2.0",
    "transformers==4.57.0",
    "funasr==1.2.7",
    "torchaudio==2.8.0+cu126"
]



# apt install -y ffmpeg"
# sudo apt-get install -y libcudnn9-cuda-12 libcudnn9-dev-cuda-12